samples/_failures_safe/1761403656_ce2b3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd673ff6.c: In function ‘main’:
./samples/SAFE/__tmp_fd673ff6.c:147:20: error: expected ‘;’ at end of input
  147 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_fd673ff6.c:147:9: error: expected declaration or statement at end of input
  147 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_fd673ff6.c:147:9: error: expected declaration or statement at end of input
